--- a/DigitalDevice/app/src/main/res/values/strings.xml
+++ b/DigitalDevice/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">DigitalDevice</string>
     <string name="register_text">Enter to <u>Register</u></string>
     <string name="actionHome">Dashboard</string>
-    <string name="actionMap">Map</string>
+    <string name="actionVehicle">Vehicles</string>
     <string name="actionSetting">Setting</string>
 </resources>
