--- a/DigitalDevice/app/src/main/res/values/strings.xml
+++ b/DigitalDevice/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="actionHome">Dashboard</string>
     <string name="actionVehicle">Vehicles</string>
     <string name="actionSetting">Setting</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="my_map_api_key">AIzaSyAQuKmII-gquMp97Y9d7zWhVqT9TQ_hJvw</string>
+
 </resources>
