--- a/DigitalDevice/app/src/main/res/values/strings.xml
+++ b/DigitalDevice/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="actionSetting">Setting</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="my_map_api_key">AIzaSyAQuKmII-gquMp97Y9d7zWhVqT9TQ_hJvw</string>
+
+    <string-array name="device_types">
+        <item>Air conditioner</item>
+        <item>Different device</item>
+        <item>Lamp</item>
+    </string-array>
+
 </resources>
